# ineuron

./: .gitignore  main.py  pyproject.toml
experiment/: a.ipynb
xray/: exception.py  logger.py
xray/cloud_storage/: s3_operations.py
xray/components/: data_ingestion.py  data_transformation.py  model_training.py
xray/constants/training_pipeline/: __init__.py
xray/entities/: artifact_entity.py  config_entity.py
xray/ml/model/: arch.py
xray/pipeline/: training_pipeline.py
