[project]
name = "ineuron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bentoml>=1.4.12",
    "dvc>=3.59.1",
    "joblib>=1.4.2",
    "jupyterlab>=4.4.1",
    "matplotlib>=3.10.1",
    "mlflow>=2.22.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "tox>=4.25.0",
]
